addeded my fonts

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <link rel="shortcut icon" href="https://cdn-icons-png.flaticon.com/128/145/145802.png" type="image/x-icon">
     <title>First Portfolio Website</title>
     <link rel="stylesheet" href="style/style.css">
+    <script src="https://kit.fontawesome.com/5ab607bd34.js" crossorigin="anonymous"></script>
 </head>
 <body class="work-sans-normal">
      <header class="header secondary-bg">
@@ -26,8 +27,8 @@
                 <h3 class="bannergreating">Hi, i am</h3>
                 <h2 class="bannertitle">Marry Hardy</h2>
                 <p class="bannerdescription">Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
-                <button class="btn">Download CV</button>
-                <button class="btn2">Contact</button>
+                <button class="btn"> <i class="fa-solid fa-download"></i> Download CV</button>
+                <button class="btn2"> <i class="fa-solid fa-phone"></i> Contact</button>
             </div>
             <img class="bannerprofilepicture" src="../first portfolio website/portfolio-resources/images/hardy.png" alt="">
         </div>
